feat: :construction: Nueva estructura del codigo con resgistro y crear contrañaa
Se creo la pagina para crear contraseña de forma exitosa, tambien se creo la pagina de crear cuenta quedo termianda

create.accounnt.html listo,  nuevo css llamado estio.css creados

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </form>
         
         <div class="links">
-            <a href="#">Crear cuenta</a>
+            <a href="create.account.html">Crear cuenta</a>
             <a href="#">¿Has olvidado tu contraseña?</a>
         </div>
     </div>
