feat: :construction: Cambio finales
Se agregaron botones que no se pudieron poner

Agregaron acciones get

--- a/create.account.html
+++ b/create.account.html
@@ -20,7 +20,7 @@
   <div class="container">
     <h2>Registro</h2>
     <hr />
-    <form>
+    <form action="recuperarpasword.html" method="GET">
       <input type="text" placeholder="Nombre Completo" required />
       <input type="text" placeholder="No. Identificación" required />
       <input type="email" placeholder="E-mail" required />
