--- a/available-flights.html
+++ b/available-flights.html
@@ -23,7 +23,7 @@
         </header>
 
         <div class="user-info">
-            <span>John Doe</span>
+            <span>Jaun Pablo</span>
             <a href="index.html">Cerrar Sesión</a>
         </div>
 
