--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </div>
             <h1>Iniciar Sesión</h1>
 
-            <form class="login-form" action="menu.html">
+            <form action="menu.html" method="GET">
                 <div class="input-group">
-                    <label for="email">Email</label>
+                    <label for="email">Emailsd</label>
                     <input type="email" id="email" placeholder="tucorreo@ejemplo.com" required>
                 </div>
                 
@@ -40,6 +40,7 @@
             <div class="links">
                 <a href="create.account.html">Crear cuenta</a>
                 <a href="recuperarpasword.html">¿Has olvidado tu contraseña?</a>
+                
             </div>
         </div>
     </div>
