--- a/recuperarpasword.html
+++ b/recuperarpasword.html
@@ -20,9 +20,8 @@
     <main class="container">
         <h2>Recuperar Contraseña</h2>
         <hr>
-        
-        <form class="recovery-form">
-            <div class="form-group">
+        <form action="createpasseword.html" method="GET">
+        <div class="form-group">
                 <input type="email" id="email" placeholder="Email" required>
             </div>
             
